# active-inference-rs

./: Cargo.toml  README.md
src/: brain.rs  environment.rs  lib.rs  nerve.rs
src/pomdp/: mod.rs  world_model.rs
src/posg/: agent.rs  mod.rs
src/posg/observation/: known.rs  mod.rs  nonparametric.rs
src/posg/policy_others/: mod.rs  nonparametric.rs
tests/: rock_paper_scissors.rs  rock_paper_scissors_easy.rs  rock_paper_scissors_hard.rs  rock_paper_scissors_simple.rs
